--- a/styles/style.css
+++ b/styles/style.css
@@ -99,34 +99,11 @@ html, body
   border-radius: 20px;
 }
 
-#form-header
+#form-header, #info-header
 {
   align-self: center;
 
-  font-size: 2.5em;
-}
-
-.info-box
-{
-  display: flex;
-  flex-direction: column;
-
-  margin-left: 3rem;
-  margin-bottom: 0.75rem;
-}
-
-.info-box h2
-{
-  font-size: 2em;
-  font-weight: bold;
-
-  margin: 0.75rem 0;
-}
-
-.info-box p
-{
-  font-size: 1.75em;
-  margin: 0;
+  font-size: 4vh;
 }
 
 .input-box
@@ -140,7 +117,7 @@ html, body
 
 .input-box label
 {
-  font-size: 2em;
+  font-size: 3vh;
   font-weight: bold;
   /*font family*/
 }
@@ -182,6 +159,29 @@ input::-webkit-inner-spin-button
 #submit:hover
 {
   box-shadow: 0 0 5px 2px lightgray;
+}
+
+.info-box
+{
+  display: flex;
+  flex-direction: column;
+
+  margin-left: 3rem;
+  margin-bottom: 0.75rem;
+}
+
+.info-box h2
+{
+  font-size: 200%;
+  font-weight: bold;
+
+  margin: 0.75rem 0;
+}
+
+.info-box p
+{
+  font-size: 1.75em;
+  margin: 0;
 }
 
 #container
@@ -246,10 +246,12 @@ input::-webkit-inner-spin-button
   background-color: white;
   width: 7%;
   height: 98%;
+  transition: transform 200ms;
 
   writing-mode: vertical-lr;
   font-size: 2em;
   font-weight: bold;
+  white-space: nowrap;
 
   display: flex;
   justify-content: center;
@@ -261,15 +263,26 @@ input::-webkit-inner-spin-button
   border-left: none;
 }
 
+.book:hover
+{
+  transform: rotateZ(10deg);
+}
+
 #add-button
 {
   color: white;
   user-select: none;
-  font-size: 4em;
+  font-size: 6vh;
+  font-family: "SnickerSnack";
 
   transition: 250ms;
 }
 #add-button:hover
 {
   transform: scale(1.125);
+}
+
+@font-face {
+  font-family: "SnickerSnack";
+  src: url(fonts/SnickerSnack-BgDV.ttf);
 }
